--- a/public/client/vote.html
+++ b/public/client/vote.html
@@ -2,8 +2,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../public/stylesheets/material.min.css">
     <link rel="stylesheet" href="../stylesheets/material.min.css">
+    <script src="../javascripts/material.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="https://unpkg.com/vue"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue-resource@1.3.4"></script>
@@ -65,23 +65,28 @@
         el: 'form',
         data: {
             canadians: [],
+            limit: 0,
             dataUrl: "http://localhost:3000/vote"
         },
-        mounted: function () {
+        created: function () {
             this.getData();
+        },
+        updated: function () {
+            componentHandler.upgradeAllRegistered();
         },
         methods: {
             getData: function () {
                 var vm = this;
-                vm.$http.get(vm.dataUrl).then(function (responses) {
-                    var canadians = [];
-                    for (var i = 0; i < responses.length; i++) {
-                        canadians.push({name: responses[i]});
+                vm.$http.get(vm.dataUrl).then(function (response) {
+                    response = JSON.parse(response.bodyText);
+                    this.limit = response.limit;
+                    for (var i = 0; i < response.canadians.length; i++) {
+                        this.canadians.push({name: response.canadians[i]});
                     }
-                    vm.$set('canadians', canadians);
                 });
             }
         }
     });
 </script>
+
 </html>
