--- a/public/client/vote.html
+++ b/public/client/vote.html
@@ -1,4 +1,4 @@
-<html>
+<html xmlns:v-on="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -49,8 +49,9 @@
                                     </label></div>
                             </form>
                         </div>
-                        <div class="mdl-card__actions mdl-card--border">
-                            <button class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect">投票
+                        <div class="mdl-card__actions mdl-card--border" id="submit">
+                            <button class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect"
+                                    v-on:click="sendData">投票
                             </button>
                         </div>
                     </div>
@@ -83,9 +84,9 @@
                     var localStorage = window.localStorage;
                     var token = response.headers.map["X-VOTE-TOKEN"][0];
                     //save the token to local storage
-                    if(localStorage.getItem("X-VOTE-TOKEN") === null){
+                    if (localStorage.getItem("X-VOTE-TOKEN") === null) {
                         // if do not have this item
-                        localStorage.setItem("X-VOTE-TOKEN",token);
+                        localStorage.setItem("X-VOTE-TOKEN", token);
                         console.log("X-VOTE-TOKEN");
                     }
 
@@ -99,6 +100,34 @@
             }
         }
     });
+    var submit = new Vue({
+        el: "#submit",
+        data: {
+            dataUrl: "http://localhost:3000/vote"
+        },
+        methods: {
+            sendData: function () {
+                //Prepare data
+                var data = {};
+                data.target = [];
+                //Todo: verify
+                var checkboxs = document.querySelectorAll("input[type=checkbox]");
+                for (var i = 0; i < checkboxs.length; i++) {
+                    if (checkboxs[i].checked) {
+                        data.target.push(checkboxs[i].id)
+                    }
+                }
+                var token = window.localStorage.getItem("X-VOTE-TOKEN");
+                this.$http.post(this.dataUrl, data, {headers: {"X-VOTE-TOKEN": token}}).then(function (response) {
+                    if (response.status === 200) {
+                        console.log("Success");
+                        //Todo: Error Handle
+                    }
+                });
+
+            }
+        }
+    })
 </script>
 
 </html>
