--- a/public/client/admin.html
+++ b/public/client/admin.html
@@ -79,15 +79,15 @@
         data: {
             canadians: [],
             results: [],
-            dataUrl: "http://localhost:3000/vote",
-            resultUrl: "http://localhost:3000/admin/result",
-            tokenUrl: "http://localhost:3000/admin"
+            dataUrl: "http://127.0.0.1:3000/vote",
+            resultUrl: "http://127.0.0.1:3000/admin/result",
+            tokenUrl: "http://127.0.0.1:3000/admin"
         },
         created: function () {
             var vm = this;
             //save the data to local storage
             vm.$http.post(vm.tokenUrl, {"token": "SecretToken"}).then(function (response) {
-                window.localStorage.setItem("X-AUTHENTICATION-TOKEN", response.headers.map["X-AUTHENTICATION-TOKEN"][0])
+                window.localStorage.setItem("X-Authentication-Token", response.headers.map["X-Authentication-Token"][0])
             });
 
             vm.$http.get(vm.dataUrl).then(function (response) {
@@ -97,7 +97,7 @@
                 for (var i = 0; i < response.canadians.length; i++) {
                     this.canadians.push({name: response.canadians[i]});
                     const j = i;
-                    vm.$http.post(vm.resultUrl, {"target": response.canadians[i]}, {headers: {"X-AUTHENTICATION-TOKEN": window.localStorage.getItem("X-AUTHENTICATION-TOKEN")}}).then(function (response) {
+                    vm.$http.post(vm.resultUrl, {"target": response.canadians[i]}, {headers: {"X-Authentication-Token": window.localStorage.getItem("X-Authentication-Token")}}).then(function (response) {
                         response = JSON.parse(response.bodyText);
                         if (response === null) {
                             this.$set(vm.canadians[j], 'value', 0)
@@ -116,11 +116,11 @@
     var submit = new Vue({
         el: "#submit",
         data: {
-            deleteUrl: "http://localhost:3000/admin/delete"
+            deleteUrl: "http://127.0.0.1:3000/admin/delete"
         },
         methods: {
             deleteData: function (event) {
-                this.$http.post(this.deleteUrl, {}, {headers: {"X-AUTHENTICATION-TOKEN": window.localStorage.getItem("X-AUTHENTICATION-TOKEN")}}).then(function () {
+                this.$http.post(this.deleteUrl, {}, {headers: {"X-Authentication-Token": window.localStorage.getItem("X-Authentication-Token")}}).then(function () {
                     window.location.reload();
                 });
             }
